colors, fonts variables and header created

--- a/home.html
+++ b/home.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Square1_home</title>
-    <link rel="stylesheet" href="styles/home_styles.css">
+
+    <link rel="stylesheet" href="./styles/home_styles.css">
+    <link rel="icon" href="https://www.square1.io/favicon.svg">
 </head>
 <body>
-    
+    <header class="header">
+        <div>
+            <img src="./assets/images/logo.svg" alt="Square1 Store Logo" width="120" height="37" class="img-logo">
+        </div>
+        <nav></nav>
+    </header>
+    <script src="./scripts/home.js"></script>
 </body>
 </html>
