Homepage done (Desktop version)

--- a/home.html
+++ b/home.html
@@ -75,6 +75,29 @@
             <a href="#" class="nav-item">Contact us</a>
         </nav>
     </header>
+    <section class="banner-top">
+        <div class="banner-top-container">
+            <img src="./assets/images/image-banner-top.svg" width="308px" height="647px" alt="top banner model image"
+                class="top-image">
+            <div class="banner-top-content">
+                <span class="subtitle">HOT DEALS THIS WEEK</span>
+                <h2 class="title">SALE UP 50%
+                    MODERN FURNITURE</h2>
+                <button class="top-button">View now</button>
+            </div>
+        </div>
+    </section>
+    <section class="brands-nav">
+        <div class="brands-container">
+            <img src="./assets/images/chanel-logo.svg" alt="Chanel logo" class="brand-logo" width="196px" height="33px">
+            <img src="./assets/images/louis_vuitton-logo.svg" alt="Louis Vuitton logo" class="brand-logo" width="196px"
+                height="25px">
+            <img src="./assets/images/prada-logo.svg" alt="Prada logo" class="brand-logo" width="196px" height="32px">
+            <img src="./assets/images/calvin_klein-logo.svg" alt="Calvin Klein logo" class="brand-logo" width="196px"
+                height="33px">
+            <img src="./assets/images/denim-logo.svg" alt="Prada logo" class="brand-logo" width="196px" height="27px">
+        </div>
+    </section>
     <main class="main">
         <section class="new-arrivals">
             <div class="new-arrivals-top">
@@ -248,6 +271,9 @@
                     <button class="product-card_buy">Comprar</button>
                 </article>
             </div>
+            <button class="new-arrivals-button">
+                View More
+            </button>
         </section>
     </main>
     <section class="banner-bottom">
@@ -261,7 +287,7 @@
             <button class="bottom-button">Shop Now</button>
         </div>
     </section>
-    <section class="assurance">
+    <section class="assurance-nav">
         <div class="assurance-container">
             <div class="assurance-content">
                 <svg width="51" height="50" viewBox="0 0 51 50" fill="none" xmlns="http://www.w3.org/2000/svg">
