--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <div class="main-header">
             <div class="header-logo-box">
                 <button class="menu-btn">
-                    <!-- Menu icon -->
+                    <!-- Menu icon (Mobile version)-->
                     <svg class="header-icon icons-menu" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="lucide lucide-menu">
@@ -51,22 +51,27 @@
                 </a>
                 <!-- Shopping cart -->
                 <a href="#" class="header-icon icons-cart">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="lucide lucide-shopping-basket">
-                        <path d="m15 11-1 9" />
-                        <path d="m19 11-4-7" />
-                        <path d="M2 11h20" />
-                        <path d="m3.5 11 1.6 7.4a2 2 0 0 0 2 1.6h9.8a2 2 0 0 0 2-1.6l1.7-7.4" />
-                        <path d="M4.5 15.5h15" />
-                        <path d="m5 11 4-7" />
-                        <path d="m9 11 1 9" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <g stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            fill="none">
+                            <path d="m15 11-1 9" />
+                            <path d="m19 11-4-7" />
+                            <path d="M2 11h20" />
+                            <path d="m3.5 11 1.6 7.4a2 2 0 0 0 2 1.6h9.8a2 2 0 0 0 2-1.6l1.7-7.4" />
+                            <path d="M4.5 15.5h15" />
+                            <path d="m5 11 4-7" />
+                            <path d="m9 11 1 9" />
+                        </g>
+
+                        <circle cx="18" cy="17" r="5" fill="#ED1C24" />
+                        <text x="18" y="19" text-anchor="middle" fill="white" font-size="6"
+                            font-family="sans-serif">3</text>
                     </svg>
                 </a>
             </div>
         </div>
         <nav class="header-nav">
-            <a href="#" class="nav-item">Women</a>
+            <a href="/shop.html" class="nav-item">Women</a>
             <a href="#" class="nav-item">Men</a>
             <a href="#" class="nav-item">Kids</a>
             <a href="#" class="nav-item">Accesories</a>
