minicart, home, shop and productPage ready

--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
                     </svg>
                 </a>
                 <!-- Shopping cart -->
-                <a href="#" class="header-icon icons-cart">
+                <a href="#" class="header-icon icons-cart" id="shopping-cart-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <g stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             fill="none">
