--- a/shop.html
+++ b/shop.html
@@ -50,7 +50,7 @@
                     </svg>
                 </a>
                 <!-- Shopping cart -->
-                <a href="#" class="header-icon icons-cart">
+                <a href="#" class="header-icon icons-cart" id="shopping-cart-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <g stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             fill="none">
@@ -439,6 +439,7 @@
             </nav>
         </div>
     </footer>
+    <script src="./scripts/shop.js" type="module"></script>
 </body>
 
 </html>
