minicart, home, shop, productPage and cartPage ready

--- a/productPage.html
+++ b/productPage.html
@@ -382,7 +382,7 @@
                 <span class="subtotal-title">Subtotal</span>
                 <span class="subtotal-data">$100.00</span>
             </div>
-            <div class="mini-cart-confirm">
+            <div class="mini-cart-confirm" id="minicart-confirm-btn">
                 <button class="confirm-btn">Confirm</button>
             </div>
         </article>
