--- a/checkout.html
+++ b/checkout.html
@@ -1,12 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Square1_checkout</title>
     <link rel="stylesheet" href="styles/checkout_styles.css">
+    <link rel="icon" href="https://www.square1.io/favicon.svg">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="main-header">
+            <div class="header-logo-box">
+                <button class="menu-btn">
+                    <!-- Menu icon (Mobile version)-->
+                    <svg class="header-icon icons-menu" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" class="lucide lucide-menu">
+                        <line x1="4" x2="20" y1="12" y2="12" />
+                        <line x1="4" x2="20" y1="6" y2="6" />
+                        <line x1="4" x2="20" y1="18" y2="18" />
+                    </svg>
+                </button>
+
+                <a href="/home.html">
+                    <img src="./assets/images/logo.svg" alt="Square1 Store Logo" width="120" height="37"
+                        class="img-logo">
+                </a>
+            </div>
+
+            <div class="header-icons">
+                <!-- Search icon -->
+                <a href="#" class="header-icon icons-search">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-search">
+                        <circle cx="11" cy="11" r="8" />
+                        <path d="m21 21-4.3-4.3" />
+                    </svg>
+                </a>
+                <!-- User icon -->
+                <a href="#" class="header-icon icons-profile">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-user">
+                        <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
+                        <circle cx="12" cy="7" r="4" />
+                    </svg>
+                </a>
+                <!-- Shopping cart -->
+                <a href="#" class="header-icon icons-cart" id="shopping-cart-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <g stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            fill="none">
+                            <path d="m15 11-1 9" />
+                            <path d="m19 11-4-7" />
+                            <path d="M2 11h20" />
+                            <path d="m3.5 11 1.6 7.4a2 2 0 0 0 2 1.6h9.8a2 2 0 0 0 2-1.6l1.7-7.4" />
+                            <path d="M4.5 15.5h15" />
+                            <path d="m5 11 4-7" />
+                            <path d="m9 11 1 9" />
+                        </g>
+
+                        <circle cx="18" cy="17" r="5" fill="#ED1C24" />
+                        <text x="18" y="19" text-anchor="middle" fill="white" font-size="6"
+                            font-family="sans-serif">3</text>
+                    </svg>
+                </a>
+            </div>
+        </div>
+        <nav class="header-nav">
+            <a href="/shop.html" class="nav-item">Women</a>
+            <a href="#" class="nav-item">Men</a>
+            <a href="#" class="nav-item">Kids</a>
+            <a href="#" class="nav-item">Accesories</a>
+            <a href="#" class="nav-item">About us</a>
+            <a href="#" class="nav-item">News</a>
+            <a href="#" class="nav-item">Contact us</a>
+        </nav>
+    </header>
+    <div class="checkout-title">
+        <h1>Checkout</h1>
+    </div>
+    <main class="main">
+        <section class="form-section">
+            <article class="contact-form-block">
+                <div class="contact-labels-box">
+                    <span class="form-title">Contact</span>
+                    <div class="labels-account">
+                        <span>Have an account?</span>
+                        <a href="#">Create Account</a>
+                    </div>
+                </div>
+                <input class="form-input" type="email" placeholder="Email Address">
+            </article>
+            <article class="delivery-form-block">
+                <span class="form-title">Delivery</span>
+                <select class="form-input">
+                    <option selected hidden>Country / Region</option>
+                    <option value="Colombia">Colombia</option>
+                </select>
+                <div class="delivery-name-box">
+                    <input type="text" class="form-input name-width-input" placeholder="First Name">
+                    <input type="text" class="form-input name-width-input" placeholder="Last Name">
+                </div>
+                <input type="text" class="form-input" placeholder="Address">
+                <div class="delivery-city-box">
+                    <input type="text" class="form-input name-width-input" placeholder="City">
+                    <input type="text" class="form-input name-width-input" placeholder="Postal Code">
+                </div>
+                <div class="delivery-check-box">
+                    <input id="delivery-check" type="checkbox">
+                    <label for="delivery-check" class="delivery-check-message">Save This Info for future</label>
+                </div>
+            </article>
+            <article class="payment-form-block">
+                <span class="form-title">Payment</span>
+                <select class="form-input select-payment-background" id="payment-select">
+                    <option selected value="credit">Credit Card</option>
+                    <option value="debit">Debit Card</option>
+                    <option value="cash">Cash</option>
+                </select>
+                <div class="payment-data-box">
+                    <input type="number" class="payment-input payment-input-background" placeholder="Card Number">
+                    <div class="payment-date-box">
+                        <input type="month" class="payment-input name-width-input" placeholder="Expiration Date">
+                        <input type="number" class="payment-input name-width-input" max="999"
+                            placeholder="Security Code">
+                    </div>
+                    <input type="text" class="payment-input" placeholder="Card Holder Name">
+                    <div class="payment-check-box">
+                        <input id="payment-check" type="checkbox">
+                        <label for="payment-check" class="payment-check-message">Save This Info for future</label>
+                    </div>
+                </div>
+                <button class="payment-confirm-btn">Pay Now</button>
+                <span class="copyright-message">Copyright © 2022 FASCO . All Rights Reseved.</span>
+            </article>
+        </section>
+        <section class="product-data-section">
+            <div class="product-data-block">
+                <div class="image-box">
+                    <a href="#">
+                        <img src="https://trueshop.co/cdn/shop/files/Signature-T-Shirt---Pine-Green-5_800x.jpg?v=1738204210"
+                            alt="Signature T-Shirt - Pine Green">
+                    </a>
+                    <div>1</div>
+                </div>
+                <div class="checkout-product-data-box">
+                    <span class="checkout-product-title">Signature T-Shirt - Pine Green</span>
+                    <div class="checkout-product-details">
+                        <span class="checkout-product-color">Red</span>
+                        <span class="checkout-product-price">$100.00</span>
+                    </div>
+                </div>
+            </div>
+            <div class="product-amount-block">
+                <div class="checkout-subtotal-box">
+                    <span>Subtotal</span>
+                    <span>$100.00</span>
+                </div>
+                <div class="checkout-shipping-box">
+                    <span>Shipping</span>
+                    <span>$40.00</span>
+                </div>
+                <div class="checkout-total-box">
+                    <span>Total</span>
+                    <span class="checkout-total">$140.00</span>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer-content">
+            <a href="/home.html">
+                <img src="./assets/images/logo.svg" alt="Square1 Store Logo" width="90" height="28" class="img-logo">
+            </a>
+            <nav class="footer-nav">
+                <a href="#" class="nav-item">Support Center</a>
+                <a href="#" class="nav-item">Invoicing</a>
+                <a href="#" class="nav-item">Contract</a>
+                <a href="#" class="nav-item">Careers</a>
+                <a href="#" class="nav-item">Blog</a>
+                <a href="#" class="nav-item">FAQ's</a>
+            </nav>
+        </div>
+    </footer>
 </body>
+
 </html>
